restructure wip w/conditions

--- a/configs/standard/names.yml
+++ b/configs/standard/names.yml
@@ -2,12 +2,130 @@ names:
    masculine:
     - given:
        - Victor
-       - X.
       family: Frankenstein
     - given:
        - Vlad
       family: Dracul
+    - given:
+      - R.
+      - M.
+      family: Renfield
+    - given:
+      - Johnathan
+      family: Harker
+    - given:
+      - Abraham
+      family: VanHelsing
+      credential: M.D.
+    - given:
+      - Johnathan
+      family: Seward
+      credential: M.D.
+    - given:
+      - Arthur
+      family: Dent
+    - given:
+      - Ford
+      family: Prefect 
+    - given:
+      - Zaphod
+      family: Beeblebrox
+    - given:
+      - Randolph
+      family: Carter
+    - given:
+      - Harley
+      family: Warren
+    - given:
+      - Wilbur
+      family: Whateley
+    - given:
+      - Henry
+      family: Armitage 
+    - given:
+      - Francis
+      family: Morgan
+    - given:
+      - Killian
+      family: Darkwater
+    - given:
+      - Doc
+      family: Morbid
+      credential: M.D. 
+    - given:
+      - Frank
+      family: Horrigan 
+    - given:
+      - Dick
+      family: Richardson 
+    - given:
+      - John
+      family: Connor 
+    - given:
+      - Kyle 
+      family: Reese 
+    - given:
+      - Miles
+      family: Dyson 
+    - given:
+      - Samuel 
+      family: Loomis
+      credential: M.D.
+    - given:
+      - Jack
+      family: Torrance 
+    - given:
+      - Danny
+      family: Torrance 
+    - given:
+      - Richard
+      family: Hallorann
+    - given:
+      - Reuben
+      family: Cogburn
+    - given:
+      - Ned
+      family: Pepper 
+    - given:
+      - Inigo
+      family: Montoya 
+    - given:
+      - Shea
+      family: Ohmsford 
+    - given:
+      - Wil
+      family: Ohmsford 
    feminine:
     - given:
-       - Jane
-      family: Doe
+       - Lavinia
+      family: Whateley
+    - given:
+      - Lucy
+      family: Westenra 
+    - given:
+      - Mina
+      family: Harker 
+    - given:
+      - Moira
+      family: Brown 
+    - given:
+      - Sarah
+      family: Connor 
+    - given:
+      - Dani
+      family: Ramos 
+    - given:
+      - Laurie
+      family: Strode
+    - given:
+      - Wendy
+      family: Torrance 
+    - given:
+      - Abra
+      family: Stone 
+    - given:
+      - Mattie
+      family: Ross 
+    - given:
+      - April
+      family: O'Neil
