--- a/configs/standard/population.yml
+++ b/configs/standard/population.yml
@@ -7,7 +7,11 @@ rules:
     patients: 5
     providers: 0    
   output: ./bin/patients.yml
-  mrn_mask: "#######"
+identifiers:
+  - mask: "#######"
+    type: PAT_MRN
+  - mask: "###-##-####"
+    type: SSN
 distributions:
   race: 
     american_indian_or_alaska_native: .2
